fix compatibility error with java 8 (#1742)